[ADD] third-party-modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = sub_oca/product-attribute
 	url = https://github.com/OCA/product-attribute.git
 	branch = 17.0
+[submodule "sub_third/third-party-modules"]
+	path = sub_third/third-party-modules
+	url = git@github.com:quilsoft-org/third-party-modules.git
+	branch = 17.0
